--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,4 +67,41 @@ nav{
 #nextConcerts{
     background-color: #FFFFFF;
     background-image: url(https://magodeozoficial.com/wp-content/uploads/2022/10/FONDO-CORAZON-OK.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    height: 1000px;
+}
+
+.elementorBackgroundOverlay{
+    background-color: #FFFFFF;
+    opacity: 0.69;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#elementorContainer{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+table{
+    width: 100%;
+    padding: 40px;
+    border-spacing: 0;
+}
+
+.concertLine{
+    background-color: rgba(0, 0, 0, 0.4);
+    height: 108px;
+}
+
+.spacer {
+    height: 10px;
 }
