--- a/styles/styles.css
+++ b/styles/styles.css
@@ -189,5 +189,55 @@ a{
     text-align: center;
 }
 
+#imageGallery{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 40px;
+}
+
+#cuadricula{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: 40px;
+    gap: 5px;
+}
+
+#cuadricula2{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5px;
+    margin-bottom: 30px;
+}
+
+
+.imagesMembers{
+    height: 400px;
+    border: 3px solid white;
+}
+
+#videoGallery{ 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-image: url(https://magodeozoficial.com/wp-content/uploads/2022/10/mago-fondo-gris.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    color: #b8b8b8;
+}
+
+#titleVideoGallery{
+   margin: 40px;
+}
+
+video{
+    width: 60%;
+    margin: 40px;
+}
+
+
 
 
